--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,10 @@
     <string name="BuccaneersID">TB</string>
     <string name="TitansID">TEN</string>
     <string name="RedskinsID">WAS</string>
+
+    <string name="playerNamePlaceholder">Player Name</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tv_placeholder_team_name">Team Name</string>
 </resources>
