feat: Add alternative views for landscape and tablet displays

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,14 @@
 <resources>
     <string name="app_name">NFL Crimewatch</string>
 
+    <string name="api_scheme">http</string>
+    <string name="api_authority">nflarrest.com</string>
+    <string name="api_team_arrests_path">api/v1/team/arrests/</string>
+    <string name="api_end_date">end_date</string>
+    <string name="api_start_date">start_date</string>
+    <string name="api_limit">limit</string>
+
+
     <string name="CardinalsID">ARI</string>
     <string name="FalconsID">ATL</string>
     <string name="RavensID">BAL</string>
