--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,8 @@
 
     <string name="playerNamePlaceholder">Player Name</string>
 
+    <string name="number_arrests_slug">arrests since</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tv_placeholder_team_name">Team Name</string>
