--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">NFL Crimewatch</string>
 
+    <string name="nav_team_label">Teams</string>
+    <string name="nav_position_label">Positions</string>
+    <string name="nav_crime_label">Crimes</string>
+    <string name="menu_header_label">Select View</string>
+
     <string name="api_scheme">http</string>
     <string name="api_authority">nflarrest.com</string>
     <string name="api_team_arrests_path">api/v1/team/arrests/</string>
@@ -44,7 +49,7 @@
     <string name="RaidersID">OAK</string>
     <string name="EaglesID">PHI</string>
     <string name="SteelersID">PIT</string>
-    <string mame="SeahawksID">SEA</string>
+    <string name="SeahawksID">SEA</string>
     <string name="SF49ersID">SF</string>
     <string name="BuccaneersID">TB</string>
     <string name="TitansID">TEN</string>
@@ -54,8 +59,6 @@
 
     <string name="number_arrests_slug">arrests since</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tv_placeholder_team_name">Team Name</string>
     <string name="title_activity_sourced_offenses">SourcedOffensesActivity</string>
 </resources>
