--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">NFL Crimewatch</string>
 
     <string name="action_settings">Settings</string>
-    <string name="team_selection_title">Preferred Team</string>
+    <string name="team_selection_title">Favorite Team</string>
 
     <string name="nav_team_label">Teams</string>
     <string name="nav_position_label">Positions</string>
