feat: Add app widget. Known issue where changing preferences does not update widget.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,5 +68,9 @@
     <string name="title_activity_sourced_offenses">SourcedOffensesActivity</string>
 
     <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
+
+    <string name="widget_title">Recent NFL Arrest</string>
 
 </resources>
