--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="action_settings">Settings</string>
     <string name="team_selection_title">Favorite Team</string>
 
+    <string name="default_no_data_display">No Data Available</string>
+
     <string name="nav_team_label">Teams</string>
     <string name="nav_position_label">Positions</string>
     <string name="nav_crime_label">Crimes</string>
